[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "torchlet"
version = "0.1.0"
description = "A Python package scaffold for Torchlet."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "modelscope",
    "safetensors",
    "torch>=2.0",
    "transformers",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

[tool.setuptools.packages.find]
where = ["src"]
